# churn-prediction-retention-report

./: .gitattributes  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: sample_customers.csv  synthetic_saas_customers.csv  telco_customers.csv
docs/: architecture.md  case_study.md  client_intake_form.md  leakage_policy.md  scope_and_privacy.md
docs/samples/: sample_churn_retention_report.typ
examples/: config.json
outputs/: client_report.typ  feature_importance.csv  manifest.json  metrics_report.md  model_card.md  predictions.csv  retention_recommendations.csv  risk_segments.csv  shap_feature_importance.csv
sample_outputs/flagship_demo/: calibration_table.csv  config_snapshot.json  data_quality_report.md  feature_importance.csv  holdout_lift_table.csv  lift_table.csv  manifest.json  metric_confidence_intervals.csv  metrics_report.md  model.joblib  model_card.md  predictions.csv  retention_recommendations.csv  risk_segments.csv  shap_feature_importance.csv
src/churn_retention_report/: __init__.py  __main__.py  artifacts.py  cli.py  config.py  contracts.py  evidence.py  explainability.py  features.py  kaggle_data.py  modeling.py  outputs.py  pdf_report.py  pipeline.py  quality.py  recommendations.py  sample_data.py  schema.py  visuals.py
tests/: test_cli.py  test_config.py  test_contracts.py  test_evidence.py  test_pipeline.py  test_quality.py  test_recommendations.py  test_sample_data.py  test_schema.py
