[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "churn-prediction-retention-report"
version = "0.1.0"
description = "Premium churn prediction pipeline with risk scores, explainable retention recommendations, and client-ready reports."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Emir Huseyin Inci" }]
dependencies = [
    "joblib>=1.3",
    "kaggle>=1.6",
    "matplotlib>=3.8",
    "numpy>=1.26,<3.0",
    "pandas>=2.1",
    "pandera>=0.19",
    "pydantic>=2.6",
    "reportlab>=4.2",
    "rich>=13.7",
    "scikit-learn>=1.4",
    "shap>=0.46,<0.50",
    "typer>=0.12",
    "xgboost>=2.1,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[project.scripts]
churn-report = "churn_retention_report.cli:app"
churn-prepare-kaggle = "churn_retention_report.kaggle_data:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--basetemp=.pytest_tmp --cov=churn_retention_report --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["B008"]

[tool.coverage.run]
omit = [
    "src/churn_retention_report/__main__.py",
]
